hphp/test/zend/good/Zend/tests/ns_081.php.expectf

Fatal error: No code may exist outside of namespace {} in %s/ns_081.php on line 16
